--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ h2 {
     padding: 5px 14px;
     color: #69727d;
     height: 40px;
+    margin-top: 8px;
 }
 
 .form_group input:focus,
@@ -117,6 +118,22 @@ footer {
 footer p {
     font-size: 1rem;
     text-align: center;
+}
+
+@media (max-width: 1025px) {
+    .form_container  {
+        display: flex;
+        align-items: center;
+        justify-content: center; 
+    }
+
+    .section_form {
+        padding: 80px 0;
+    }
+
+    .form_texts p {
+        padding-bottom: 30px;
+    }
 }
 
 @media (max-width: 768px) {
