--- a/style.css
+++ b/style.css
@@ -11,6 +11,32 @@
     --btn-color-bg: #9c3;
 }
 
+main {
+    display: flex;
+    flex-direction: column; 
+}
+
+/*box*/
+.box_left, .box_right{
+max-width: 530px;
+width: 100%;
+height: 490px;
+background-color: #000000;
+}
+
+.box_container {
+    display: grid;
+    grid-template-columns: repeat(2, 530px);
+}
+
+/* sections and divs form*/
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* form */
 h2 {
     color: #1a1a1a;
     font-family: Outfit, Sans-serif;
@@ -26,12 +52,6 @@ h2 {
     margin: 20px 0 16px 0;
 }
 
-/* sections and divs form*/
-.center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
 .section_form {
     padding: 25px 0 25px 0;
@@ -50,7 +70,6 @@ h2 {
     width: 100%;
 }
 
-/* inputs form */
 .form_group input, .form_group select {
     width: 100%;
     border-radius: 2px;
