--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 *{
-    font-family: "Outfit", sans-serif;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    font-family: "Outfit", sans-serif;
 }
 
 :root {
@@ -9,6 +12,7 @@
     --color-white: #ffffff;
     --color-black: #000000;
     --btn-color-bg: #9c3;
+    
 }
 
 main {
@@ -16,24 +20,132 @@ main {
     flex-direction: column; 
 }
 
+.teste 
+{
+    grid-gap: 40px;
+    margin-bottom: 24px;
+}
+
+/*box*/
+.section_four {
+    padding: 50px 0;
+}
+
+.box {
+   margin: 20px;
+}
+
+.element_box:hover {
+    background-color: #F2F2F2;
+    border: solid 3px #F2F2F2;
+    }
+
+.element_box {
+    max-width: 300px;
+    min-height: 300px;
+    border: solid 3px #64686d2e;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 10px;
+}
+.element_box p {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.element_box span {
+    text-align: center;
+    font-size: 24px;
+    font-weight: 600;
+   /* line-height: .9em; */
+}
+
+.element_box img {
+    width:114px;
+    height: 114px;
+}
+
+.btn a {
+    background-color: var(--btn-color-bg);
+    color: var(--color-white);
+    padding: 16px 28px;
+    font-size: 18px;
+    line-height: 1.3333;
+    text-decoration: none;
+}
+
+
+
 /*box*/
 .box_left, .box_right{
+min-height: 500px;
 max-width: 530px;
 width: 100%;
-height: 490px;
-background-color: #000000;
+background-color: #fff;
+border-radius: 20px;
+padding: 80px 40px 40px;
+box-sizing: border-box;
+margin: 20px;
+border: solid 3px #64686d2e;
+}
+
+.box_left:hover, .box_right:hover {
+background-color: #F2F2F2;
+border: solid 3px #F2F2F2;
 }
 
 .box_container {
-    display: grid;
-    grid-template-columns: repeat(2, 530px);
+    display: flex;
+    grid-gap: 40px;
 }
+
+.aspaum, .aspadois {
+    position: absolute;
+   z-index: 1;
+   top: 140px;
+}
+.aspaum img, .aspadois img {
+    width: 81px;
+    height: 81px;
+}
+
+.section_two_box {
+    padding: 0 0 40px 0;
+}
+
+blockquote p{
+    margin-bottom: 16px;
+    text-align: left;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 25px;
+    letter-spacing: 0;
+}
+
+blockquote cite {
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.footer_cite {
+    margin-bottom: 16px;
+}
+
 
 /* sections and divs form*/
 .center {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.container {
+    margin: 0 auto;
+    padding: 0 15px; 
 }
 
 /* form */
@@ -45,6 +157,7 @@ h2 {
     line-height: 42px;
     letter-spacing: -1px;
     text-align: center;
+    padding-bottom: 20px;
 }
 
 .form_texts p {
@@ -53,7 +166,7 @@ h2 {
 }
 
 
-.section_form {
+#section_form {
     padding: 25px 0 25px 0;
 }
 
@@ -61,10 +174,7 @@ h2 {
     max-width: 1140px;
 }
 
-.container {
-    margin: 0 auto;
-    padding: 0 15px; 
-}
+
 
 .form_container {
     width: 100%;
@@ -127,7 +237,7 @@ h2 {
 }
 
 /* footer */
-footer {
+footer.footer_last {
     width: 100%;
     height: 92px;
     color: var(--color-black);
@@ -146,12 +256,24 @@ footer p {
         justify-content: center; 
     }
 
-    .section_form {
+    .box_left, .box_right{
+        max-width: 410px;
+    }
+
+    .box_container, .teste {
+        flex-direction: column;
+    }
+
+    #section_form {
         padding: 80px 0;
     }
 
     .form_texts p {
         padding-bottom: 30px;
+    }
+
+    .aspadois {
+        top: 795px;
     }
 }
 
@@ -164,4 +286,40 @@ footer p {
     .form_group_state {
         width: 100%;
     }
+}
+
+/**/
+.section_three {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container_three {
+    display: flex;
+    width: 100%;
+    overflow: hidden;
+}
+
+.titles_three {
+    text-align: center;
+}
+
+.items_three {
+    display: flex;
+    transition: transform 0.5s ease;
+    scroll-behavior: smooth;
+    overflow: hidden;
+    width: 100%;
+}
+
+.item_three {
+    min-width: 100%;
+    box-sizing: border-box;
+}
+
+.content {
+    padding: 20px;
+    background-color: #f4f4f4;
+    border: 1px solid #ddd;
 }
