adicionando carrossel section 2

--- a/style.css
+++ b/style.css
@@ -274,11 +274,15 @@ footer p {
         justify-content: center; 
     }
 
+    .teste1 {
+        grid-template-columns: repeat(1, 500px);
+    }
+
     .box_left, .box_right{
         max-width: 410px;
     }
 
-    .box_container, .teste {
+    .box_container, .teste, .section_two {
         flex-direction: column;
     }
 
@@ -306,4 +310,177 @@ footer p {
     }
 }
 
-/**/
+/*accordion*/
+
+.accordion {
+    max-width: 500px;
+    width: 100%;
+}
+
+.accordion h2 {
+    text-align: left;
+}
+summary:hover{
+    cursor: pointer;
+    color:var(--color-green)
+}
+
+details {
+    position: relative;
+    border-bottom: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 0;
+    margin: 5px 0;
+    width: 500px;
+    overflow: hidden;
+}
+
+details summary {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    font-weight: bold;
+    background-color: white;
+    padding: 15px;
+    
+}
+
+details[open] summary {
+    background-color: #80CD0D; 
+    color: black; 
+}
+
+details[open] summary :hover{
+    cursor: pointer;
+    color:black;
+}
+
+details summary::-webkit-details-marker {
+    display: none;
+}
+
+details summary::before {
+    content: "+";
+    font-size: 1.2em;
+    margin-right: 10px;
+    color: black; 
+}
+
+details[open] summary::before {
+    content: "-";
+}
+
+details[open] {
+    border: 1px solid #ddd;
+}
+
+details summary::after {
+    content: "";
+    margin-left: auto;
+    width: 16px;  
+    height: 16px; 
+    background-image: url('data:image/svg+xml;utf8,<svg aria-hidden="true" class="fa-toggle e-font-icon-svg e-fas-angle-right" viewBox="0 0 256 512" xmlns="http://www.w3.org/2000/svg"><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"></path></svg>'); 
+    background-size: contain;
+    background-repeat: no-repeat;
+    transition: transform 0.3s ease;
+}
+
+details[open] summary::after {
+    transform: rotate(90deg); 
+    filter: invert(1); 
+}
+
+details > *:not(summary) {
+    padding: 15px;
+}
+
+   /*Carousel */
+.section_two_carousel {
+    padding: 30px;
+    overflow: hidden;
+}
+.items_three {
+    padding: 0;
+    display: flex;
+    max-width: 560px;
+    width: 100%;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+}
+
+.items_three::-webkit-scrollbar {
+    display: none;
+}
+
+.item_three {
+    width: 100%;
+    display: flex;
+    height: auto;
+    flex-shrink: 0;
+    max-width: 560px;
+    border-radius: 16px;
+    align-items: center;
+    flex-direction: column;
+    scroll-snap-align: start; 
+    position: relative; 
+}
+
+.item_three img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 16px; 
+}
+
+.arrow_left span,
+.arrow_right span {
+    color: white;
+    font-size: 1.5rem;
+    cursor: pointer; 
+
+}
+
+.links_desktop_carousel a {
+    font-size: 0;
+}
+
+.arrow_left,
+.arrow_right {
+    position: absolute;
+    top: 50%; 
+    transform: translateY(-50%);
+    color: #42322a;
+    font-size: 48px;
+    cursor: pointer;
+    z-index: 1; 
+    padding: 10px;
+    border-radius: 50%;
+
+}
+
+.arrow_left {
+    margin-left: 10px;
+    left: 20px;
+}
+
+.arrow_right {
+    margin-right: 10px;
+    right: 20px;
+}
+
+.links_mobile_carousel {
+    display: none;
+}
+
+.links_desktop_carousel {
+    display: flex;
+}
+
+.item_three:hover .arrow_left,
+.item_three:hover .arrow_right,
+.item_three:focus .arrow_left,
+.item_three:focus .arrow_right {
+    opacity: 1; 
+}
+
+
