--- a/style.css
+++ b/style.css
@@ -376,24 +376,24 @@ footer p {
     }
 
     .item_three {
-        flex: 0 0 100%; /* Mostrar apenas 1 slide por linha em mobile */
-        max-width: 100%; /* Largura total do container */
+        flex: 0 0 100%; 
+        max-width: 100%; 
     }
 
     .links_desktop_carousel {
-        display: none; /* Ocultar navegação desktop em mobile */
+        display: none; 
     }
 
     .links_mobile_carousel {
-        display: flex; /* Mostrar navegação mobile */
+        display: flex; 
         justify-content: space-between;
         margin-top: 10px;
     }
 
     .arrow_left,
     .arrow_right {
-        display: block; /* Mostrar os controles de navegação em mobile */
-        font-size: 0; /* Reduzir tamanho dos ícones para mobile */
+        display: block; 
+        font-size: 0; 
     }
 
  
@@ -575,4 +575,146 @@ details > *:not(summary) {
     opacity: 1; 
 }
 
+/*carrossel dois*/
+
+* {
+  box-sizing: border-box;
+  scrollbar-color: transparent transparent; /* thumb and track color */
+}
+
+
+.carousel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 400px;
+    width: 900px;
+}
+
+.carousel__viewport {
+    padding: 0;
+    display: flex;
+    max-width: 820px;
+    width: 100%;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+    list-style-type: none;
+}
+
+.carousel__slide{
+    flex: 0 0 33.33%; 
+    max-width: 33.33%; 
+    max-width: 1115px;
+    border-radius: 16px;
+    align-items: center;
+    flex-direction: column;
+    scroll-snap-align: start; 
+    position: relative; 
+    margin: 10px;
+}
+
+
+
+.carousel::before{
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' fill='%23000000' viewBox='0 0 256 256'%3E%3Cpath d='M165.66,202.34a8,8,0,0,1-11.32,11.32l-80-80a8,8,0,0,1,0-11.32l80-80a8,8,0,0,1,11.32,11.32L91.31,128Z'%3E%3C/path%3E%3C/svg%3E");
+}
+
+.carousel::after {
+    right: -20px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' fill='%23000000' viewBox='0 0 256 256'%3E%3Cpath d='M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z'%3E%3C/path%3E%3C/svg%3E");
+}
+
+.carousel__slide img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.carousel__navigation {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+  }
+  
+  .carousel__navigation-list,
+  .carousel__navigation-item {
+    display: inline-block;
+    margin: 0 5px; /* Espaçamento entre os botões de navegação */
+  }
+  
+  .carousel__navigation-button {
+    display: inline-block;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-color: #333;
+    background-clip: content-box;
+    border: 0.25rem solid transparent;
+    border-radius: 50%;
+    font-size: 0;
+    transition: transform 0.5s;
+  }
+
+.carousel::before,
+.carousel::after,
+.carousel__prev,
+.carousel__next {
+    position: absolute;
+    top: 40%;
+    /* transform: translateX(50%); */
+    color: #42322a;
+    font-size: 48px;
+    cursor: pointer;
+    z-index: 1;
+    padding: 50px;
+    border-radius: 50%;
+}
+
+.carousel__prev,
+.carousel__next {
+    z-index: 12;
+}
+
+.carousel::before,
+.carousel__prev {
+  left: 1rem;
+  /* top: 200px; */
+}
+
+.carousel::after,
+.carousel__next {
+  right: 1rem;
+  /* top: 200px; */
+}
+
+.carousel::before,
+.carousel::after {
+  content: '';
+  z-index: 2;
+  /* background-color: #333; */
+  background-size: 1.5rem 1.5rem;
+  background-repeat: no-repeat;
+  background-position: center center;
+  color: #fff;
+  font-size: 2.5rem;
+  line-height: 4rem;
+  text-align: center;
+  pointer-events: none;
+  
+}
+
+@media (max-width: 1024px) {
+    .carousel__slide {
+        flex: 0 0 100%; /* Mostra um slide por vez */
+        max-width: 100%;
+    }
+
+    .carousel__slide img{
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+}
 
