--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -14,7 +14,7 @@
 
 .main_container {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
 }
 
 .header_content h1 {
@@ -34,7 +34,7 @@
 
 .container {
     margin: 0 auto;
-    padding: 0 15px; 
+    padding: 0 15px;
 }
 
 .header_section h2 {
@@ -58,11 +58,11 @@
     justify-content: center;
     background-repeat: no-repeat;
     background-position: center top;
-    background-image: url('https://i0.wp.com/market4u.com.br/wp-content/uploads/2023/01/banner-home-min.png?fit=1920%2C1080&ssl=1');  
+    background-image: url('https://i0.wp.com/market4u.com.br/wp-content/uploads/2023/01/banner-home-min.png?fit=1920%2C1080&ssl=1');
 }
 
 /*header*/
-.header_container_content{
+.header_container_content {
     width: 100%;
     padding: 34px;
     max-width: 500px;
@@ -72,7 +72,7 @@
 .header_content p {
     margin: 20px 0;
     font-size: 20px;
-    
+
 }
 
 .header_container {
@@ -81,8 +81,7 @@
     justify-content: center;
 }
 
-.teste 
-{
+.box_container {
     grid-gap: 40px;
     margin-bottom: 24px;
 }
@@ -90,17 +89,17 @@
 .header_container {
     display: grid;
     margin-bottom: 24px;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
-.section_one_content{
+.section_one_content {
     display: grid;
     margin-bottom: 24px;
     grid-template-columns: repeat(2, 500px);
 }
 
 .section_one_content .box_content {
-    width:100%;
+    width: 100%;
     padding: 40px;
     display: flex;
     min-height: 300px;
@@ -113,11 +112,11 @@
 
 /*box*/
 .section_four, .section_one_container {
-    padding: 50px 0;
+    padding: 80px 0;
 }
 
 .box {
-   margin: 20px;
+    margin: 20px;
 }
 
 .element_box:hover, .box_content:hover {
@@ -136,6 +135,7 @@
     justify-content: center;
     border: solid 3px #64686d2e;
 }
+
 .element_box p, .box_content p {
     display: flex;
     margin-top: 20px;
@@ -146,7 +146,7 @@
     font-size: 24px;
     font-weight: 600;
     text-align: center;
-  
+
 }
 
 .element_box img, .box_content img {
@@ -166,21 +166,21 @@
 }
 
 /*box*/
-.box_left, .box_right{
-width: 100%;
-margin: 20px;
-max-width: 530px;
-min-height: 500px;
-border-radius: 20px;
-box-sizing: border-box;
-background-color: #fff;
-padding: 80px 40px 40px;
-border: solid 3px #64686d2e;
+.box_left, .box_right {
+    width: 100%;
+    margin: 20px;
+    max-width: 530px;
+    min-height: 500px;
+    border-radius: 20px;
+    box-sizing: border-box;
+    background-color: #fff;
+    padding: 80px 40px 40px;
+    border: solid 3px #64686d2e;
 }
 
 .box_left:hover, .box_right:hover {
-background-color: #F2F2F2;
-border: solid 3px #F2F2F2;
+    background-color: #F2F2F2;
+    border: solid 3px #F2F2F2;
 }
 
 .box_container {
@@ -189,10 +189,11 @@ border: solid 3px #F2F2F2;
 }
 
 .aspaum, .aspadois {
-   z-index: 1;
-   top: 140px;
-   position: absolute;
+    z-index: 1;
+    top: 140px;
+    position: absolute;
 }
+
 .aspaum img, .aspadois img {
     width: 81px;
     height: 81px;
@@ -202,7 +203,7 @@ border: solid 3px #F2F2F2;
     padding: 0 0 40px 0;
 }
 
-blockquote p{
+blockquote p {
     font-size: 20px;
     font-weight: 400;
     text-align: left;
@@ -255,17 +256,17 @@ blockquote cite {
     border-color: var(--color-green);
 }
 
-.form_group{
+.form_group {
     margin-bottom: 10px;
 }
 
 .form_group_row {
     display: flex;
-    gap: 10px; 
+    gap: 10px;
 }
 
 .form_group_city {
-    width: 80% 
+    width: 80%
 }
 
 .form_group_state {
@@ -290,7 +291,7 @@ blockquote cite {
 
 .send_button button:focus {
     color: var(--color-white);
-    background-color:black;
+    background-color: black;
     box-shadow: 5px 5px var(--button-color-bg);
 }
 
@@ -308,9 +309,9 @@ footer p {
 }
 
 /*accordion*/
-.section_two_container_content  {
+.section_two_container_content {
     width: 100%;
-    width: 80vw; 
+    width: 80vw;
     max-width: 500px;
 }
 
@@ -318,9 +319,9 @@ footer p {
     text-align: left;
 }
 
-.section_two_container_content summary:hover{
+.section_two_container_content summary:hover {
     cursor: pointer;
-    color:var(--color-green)
+    color: var(--color-green)
 }
 
 .section_two_container_content details {
@@ -343,12 +344,12 @@ footer p {
 }
 
 .section_two_container_content details[open] summary {
-    color: black; 
+    color: black;
     background-color: #80CD0D;
 }
 
-.section_two_container_content details[open] summary :hover{
-    color:black;
+.section_two_container_content details[open] summary :hover {
+    color: black;
     cursor: pointer;
 }
 
@@ -358,10 +359,9 @@ footer p {
 
 .section_two_container_content details summary::before {
     content: "+";
-    color: black; 
+    color: black;
     font-size: 1.2em;
     margin-right: 10px;
- 
 }
 
 .section_two_container_content details[open] summary::before {
@@ -374,30 +374,28 @@ footer p {
 
 .section_two_container_content details summary::after {
     content: "";
-    width: 16px;  
-    height: 16px; 
+    width: 16px;
+    height: 16px;
     margin-left: auto;
     background-size: contain;
     background-repeat: no-repeat;
     transition: transform 0.3s ease;
-    background-image: url('data:image/svg+xml;utf8,<svg aria-hidden="true" class="fa-toggle e-font-icon-svg e-fas-angle-right" viewBox="0 0 256 512" xmlns="http://www.w3.org/2000/svg"><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"></path></svg>'); 
+    background-image: url('data:image/svg+xml;utf8,<svg aria-hidden="true" class="fa-toggle e-font-icon-svg e-fas-angle-right" viewBox="0 0 256 512" xmlns="http://www.w3.org/2000/svg"><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"></path></svg>');
 }
 
 .section_two_container_content details[open] summary::after {
-    transform: rotate(90deg); 
-    filter: invert(1); 
+    transform: rotate(90deg);
+    filter: invert(1);
 }
 
-.section_two_container_content details > *:not(summary) {
+.section_two_container_content details>*:not(summary) {
     padding: 15px;
 }
 
 /* first Carousel */
-
-
 .section_two_carousel_container, .carousel__viewport {
     padding: 0;
-    width: 80vw; 
+    width: 80vw;
     display: flex;
     max-width: 560px;
     overflow-x: scroll;
@@ -414,8 +412,8 @@ footer p {
     flex-shrink: 0;
     max-width: 560px;
     border-radius: 16px;
-    position: relative; 
-    scroll-snap-align: start; 
+    position: relative;
+    scroll-snap-align: start;
 }
 
 /*second carrossel*/
@@ -423,17 +421,15 @@ footer p {
     padding-top: 100px;
     overflow-x: hidden;
     position: relative;
-    padding-bottom: 100px;
     flex-direction: column;
 }
 
 .carousel__slide {
     width: 100%;
-    margin: 10px;
     flex: 0 0 33%;
 }
 
-.section_two_container .carousel__slide  {
+.section_two_container .carousel__slide {
     width: 100%;
     margin: 10px;
     flex: 0 0 100%;
@@ -443,50 +439,49 @@ footer p {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 16px; 
+    border-radius: 16px;
     position: relative;
 }
 
-.section_two_container .carousel__prev, 
+.section_two_container .carousel__prev,
 .section_two_container .carousel__next {
-    position: absolute; 
-    bottom: 40%; 
+    position: absolute;
+    bottom: 40%;
     z-index: 10;
 }
 
-.section_two_container 
-.carousel__viewport{
+.section_two_container .carousel__viewport {
     padding: 0;
-    width: 80vw; 
+    width: 80vw;
     display: flex;
     max-width: 570px;
     overflow-x: scroll;
     scroll-behavior: smooth;
     position: relative;
-    
+
 }
 
-.section_two_container .carousel__prev::before{
+.section_two_container .carousel__prev::before {
     content: '';
     display: inline-block;
     width: 20px;
-    height: 20px; 
+    height: 20px;
     left: 1rem;
     background-size: cover;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' fill='%23f4f0f0' viewBox='0 0 256 256'%3E%3Cpath d='M165.66,202.34a8,8,0,0,1-11.32,11.32l-80-80a8,8,0,0,1,0-11.32l80-80a8,8,0,0,1,11.32,11.32L91.31,128Z'%3E%3C/path%3E%3C/svg%3E");
 }
 
 .section_two_container .carousel__next::after {
-    content: ''; 
+    content: '';
     display: inline-block;
-    width: 20px; 
-    height: 20px; 
+    width: 20px;
+    height: 20px;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' fill='%23f4f0f0' viewBox='0 0 256 256'%3E%3Cpath d='M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z'%3E%3C/path%3E%3C/svg%3E");
     background-size: cover;
 }
 
-.section_two_container .carousel__prev::before, 
-.section_two_container .carousel__next::after{
+.section_two_container .carousel__prev::before,
+.section_two_container .carousel__next::after {
     position: absolute;
 }
 
@@ -503,52 +498,53 @@ footer p {
 }
 
 .carousel__viewport {
-    width: 100%; 
-    padding: 30px; 
+    
+    width: 100%;
     max-width: 1040px;
     scrollbar-color: transparent transparent;
 }
 
 .carousel__navigation-button {
-    width: 1.0rem;
-    height: 1.0rem;
+    width: 1.5rem;
+    height: 1.5rem;
     font-size: 0;
     border-radius: 50%;
     display: inline-block;
-    background-color:#333;
+    background-color: #333;
     transition: transform 0.1s;
     background-clip: content-box;
     border: 0.25rem solid transparent;
-  }
+}
 
-  .carousel__navigation {
-    left: 0;
-    right: 0;
-    bottom: 0; 
-    top:500px;
+.carousel__navigation {
+  margin-bottom: 10px;
     text-align: center;
-    position: absolute;
-  }
-  
-  .carousel__navigation-list,
-  .carousel__navigation-item {
-    display: inline-block;
-  }
+    
+}
 
-.section_three_container .carousel__viewport::before{
-    left: 1rem;
+.carousel__navigation-list,
+.carousel__navigation-item {
+    display: inline-block;
+}
+
+.section_three_container .carousel__viewport::before {
+    left: -1rem;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' fill='%23000000' viewBox='0 0 256 256'%3E%3Cpath d='M165.66,202.34a8,8,0,0,1-11.32,11.32l-80-80a8,8,0,0,1,0-11.32l80-80a8,8,0,0,1,11.32,11.32L91.31,128Z'%3E%3C/path%3E%3C/svg%3E");
 }
 
-.section_three_container .carousel__viewport::after{
-    right: -rem;
+.section_three_container .carousel__viewport::after {
+    right: -1rem;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' fill='%23000000' viewBox='0 0 256 256'%3E%3Cpath d='M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z'%3E%3C/path%3E%3C/svg%3E");
+}
+
+.carousel__snapper {
+    margin-left: 10px;  
 }
 
 .carousel__viewport::before,
 .carousel__viewport::after,
 .carousel__prev,
-.carousel__next {    
+.carousel__next {
     width: 4rem;
     height: 4rem;
     margin-top: 10%;
@@ -557,20 +553,20 @@ footer p {
 
 .carousel__prev,
 .carousel__next {
-    font-size: 10px;
+    font-size: 0;
     bottom: 40px;
     position: absolute;
 }
 
 .carousel__viewport::before,
 .carousel__viewport::after {
-  content: '';
-  z-index: 15;
-  position: absolute; 
-  pointer-events: none;
-  background-repeat: no-repeat;
-  background-size: 1.5rem 1.5rem;
-  background-position: center center;
+    content: '';
+    z-index: 15;
+    position: absolute;
+    pointer-events: none;
+    background-repeat: no-repeat;
+    background-size: 1.5rem 1.5rem;
+    background-position: center center;
 }
 
 .carousel__viewport:before,
@@ -590,10 +586,10 @@ footer p {
 
 /*Meidas*/
 @media (max-width: 1025px) {
-    .form_container  {
+    .form_container {
         display: flex;
         align-items: center;
-        justify-content: center; 
+        justify-content: center;
     }
 
     .section_one_content .box_content {
@@ -604,11 +600,11 @@ footer p {
         grid-template-columns: repeat(1, 100%);
     }
 
-    .box_left, .box_right{
+    .box_left, .box_right {
         max-width: 410px;
     }
 
-    .box_container, .teste, .section_two_container {
+    .box_container, .box_container, .section_two_container {
         flex-direction: column;
     }
 
@@ -623,15 +619,16 @@ footer p {
     .aspadois {
         top: 795px;
     }
+
     .carousel__viewport {
         max-width: 580px;
-       
-      }
-      
-      .carousel__viewport:before, .carousel__prev, 
-      .carousel__viewport:after, .carousel__next{
-          margin-top: 32%;
-      }
+
+    }
+
+    .carousel__viewport:before, .carousel__prev,
+    .carousel__viewport:after, .carousel__next {
+        margin-top: 32%;
+    }
 }
 
 @media (max-width: 768px) {
@@ -645,42 +642,38 @@ footer p {
     }
 
     .section_two_carousel_container_content {
-        flex: 0 0 100%; 
-        max-width: 100%; 
+        flex: 0 0 100%;
+        max-width: 100%;
     }
 
-        .section_two_container{
-            padding: 10px;
-        }
+    .section_two_container {
+        padding: 10px;
+    }
 
     .carousel__viewport {
         max-width: 310px;
     }
 
-    .carousel__slide {
-        margin: 30px;
+    .section_two_container .carousel__slide img {
+        width: 95%;
     }
 
-    
-.section_two_container .carousel__slide img  {
-    width: 95%;
-}
-
-    .carousel__viewport:before, .carousel__prev, 
-    .carousel__viewport:after, .carousel__next{
+    .carousel__viewport:before, .carousel__prev,
+    .carousel__viewport:after, .carousel__next {
         margin-top: 185px;
     }
 
-     .carousel__next {
+    .carousel__next {
         right: -1rem;
-        margin-right: 10px; 
+        margin-right: 10px;
     }
-    .carousel__viewport:before, 
-    .carousel__viewport:after{
+
+    .carousel__viewport:before,
+    .carousel__viewport:after {
         margin-top: 200px;
     }
 
     header {
-        background-position: calc(60% - 100px)  top; 
+        background-position: calc(60% - 100px) top;
     }
 }
